# live-face-recognition

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  security.py
docs/: api.md  architecture.md  benchmark-plan.md  benchmark-results.md  browser-demo-design.md  current-state.md  dataset-and-licensing.md  deployment.md  error-handling.md  gallery-build.md  gallery-manifest.md  github-release-draft-v0.1.0-rc1.md  handoff.md  internal-rc1-announcement.md  model-card.md  native-api.md  openai-compatibility.md  operator-runbook.md  pilot-operator-onboarding.md  pilot-readiness-checklist.md  privacy.md  rc1-approval-decision-template.md  rc1-human-approval-notes.md  rc1-post-publication-verification.md  rc1-release-checklist.md  rc1-release-manifest.md  rc1-review-comment-template.md  rc1-signoff-request.md  release-notes-rc1.md  release-readiness.md  roadmap.md  security.md  streaming-design.md  testing-strategy.md
scripts/: __init__.py  _client_utils.py  benchmark_api.py  build_gallery.py  smoke_release.py
tests/: __init__.py  httpx_asgi_client.py  image_helpers.py  test_auth.py  test_benchmark_api_script.py  test_browser_demo.py  test_build_gallery_script.py  test_celeba_annotations.py  test_celeba_layout.py  test_celeba_partitions.py  test_chat_completions_streaming.py  test_config_validation.py  test_dependency_policy.py  test_detection_response.py  test_diagnostics_api.py  test_docker_packaging.py  test_embedding_response.py  test_face_similarity_contract.py  test_face_similarity_detection_mode.py  test_face_similarity_embedding_mode.py  test_face_similarity_image_validation.py  test_face_similarity_similarity_mode.py  test_gallery_builder.py  test_gallery_builder_reporting.py  test_gallery_store.py  test_github_release_draft.py  test_health.py  test_image_input.py  test_model_assets.py  test_model_runtime.py  test_models_api.py  test_openai_chat_adapter.py  test_openai_chat_adapter_streaming.py  test_post_publication_docs.py  test_rc1_release_docs.py  test_rc1_signoff_docs.py  (+6 more)
(+45 files in other folders)
